Restyled profile page

--- a/html/profile.html
+++ b/html/profile.html
@@ -49,7 +49,7 @@
         <div class="content">
           <div class="left col-xs-12 col-sm-4">
             <div class="avatar-container">
-              <a id="image-trigger" href="#"><img class="profile-avatar" src="../img/profile_avatar.jpg"></a>
+              <a id="image-trigger" href="#"><img class="profile-avatar" src="../img/vd.jpg"></a>
               <ul class="edit-buttons">
                 <li><a href="#"><i class="fa fa-plus-square"></i></a></li>
                 <li><a href="#"><i class="fa fa-trash"></i></a></li>
@@ -69,12 +69,15 @@
               <span>Rating:</span>
               <input type="number" name="your_awesome_parameter" id="profile-rating" class="rating" data-icon-lib="fa" data-active-icon="fa-star" data-inactive-icon="fa-star-o" />
             </div>
+            <div class="centered margined">
+              <a href="#" class="button aqua">Follow</a>
+            </div>
 
           </div>
           <div class="mid col-xs-8 col-xs-offset-2 col-sm-offset-0 col-sm-5">
 
             <div class="block centered">
-              <h4>Basic info</h4>
+              <h4 class="underlined">Basic info</h4>
               <div class="wrapper">
                 <div class="info">
                     <p class="key">From:</p>
@@ -104,7 +107,7 @@
             </div>
             <div class="clear"></div>
             <div class="block">
-              <h4 class="centered">Skills</h4>
+              <h4 class="centered underlined">Skills</h4>
               <ul class="skills">
                 <li class="skill"><a href="#">Programming</a></li>
                 <li class="skill"><a href="#">English</a></li>
@@ -116,7 +119,7 @@
 
           <div class="right col-xs-6 col-xs-offset-3 col-sm-offset-0 col-sm-3">
             <div class="block">
-              <a href="../html/search.html"><h4 class="centered">85 Followers</h4></a>
+              <a href="../html/search.html"><h4 class="centered underlined">85 Followers</h4></a>
               <div class="wrapper">
                 <ul class="followers centered">
                   <li class="follower">
@@ -141,7 +144,7 @@
               </div>
             </div>
             <div class="block">
-              <a href="../html/search.html"><h4 class="centered"> 25 Following</h4></a> <!-- search query should be some kind of %following: @username -->
+              <a href="../html/search.html"><h4 class="centered underlined"> 25 Following</h4></a> <!-- search query should be some kind of %following: @username -->
               <div class="wrapper">
                 <ul class="following centered">
                   <li class="who-following">
@@ -159,6 +162,7 @@
           </div>
 
           <section class="showoff-section col-xs-12 col-sm-8">
+            <hr>
             <div class="block centered">
               <h4>Projects</h4>
               <ul class="projects">
@@ -183,6 +187,78 @@
             <div class="block centered">
               <h4>Portfolio</h4>
               <ul class="portfolio">
+                <li>
+                  <div class="portfolio-item">
+                    <div class="image-wrapper">
+                      <a href="../html/project.html">
+                        <img src="../img/proj_img-3.jpg"></img>
+                        <p class="name">TeamBaker</p>
+                      </a>
+                    </div>
+                    <div class="description-sector">
+                      <div class="wrapper">
+                        <div class="info first">
+                          <p class="key">Role:</p>
+                          <p class="value role">CEO, developer</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="key">Skills:</p>
+                          <p class="value skills">Scss, Bootstrap, CSS, HTML, JS</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="key">Exp:</p>
+                          <p class="value exp"> 2 months</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="key">Aim:</p>
+                          <p class="value aim">Make it easier for people to find themselves a project.</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="link"><a href="../index.html">Link</a></p>
+                        </div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="portfolio-item">
+                    <div class="image-wrapper">
+                      <a href="../html/project.html">
+                        <img src="../img/proj_img-3.jpg"></img>
+                        <p class="name">TeamBaker</p>
+                      </a>
+                    </div>
+                    <div class="description-sector">
+                      <div class="wrapper">
+                        <div class="info first">
+                          <p class="key">Role:</p>
+                          <p class="value role">CEO, developer</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="key">Skills:</p>
+                          <p class="value skills">Scss, Bootstrap, CSS, HTML, JS</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="key">Exp:</p>
+                          <p class="value exp"> 2 months</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="key">Aim:</p>
+                          <p class="value aim">Make it easier for people to find themselves a project.</p>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="info">
+                          <p class="link"><a href="../index.html">Link</a></p>
+                        </div>
+                    </div>
+                  </div>
+                </li>
                 <li>
                   <div class="portfolio-item">
                     <div class="image-wrapper">
