Test design variant for profile page.

--- a/html/profile.html
+++ b/html/profile.html
@@ -49,13 +49,14 @@
         <div class="content">
           <div class="left col-xs-12 col-sm-4">
             <div class="avatar-container">
-              <a id="image-trigger" href="#"><img class="profile-avatar" src="../img/vd.jpg"></a>
+              <a id="image-trigger" href="#"><img class="profile-avatar" src="../img/profile_avatar.jpg"></a>
               <ul class="edit-buttons">
                 <li><a href="#"><i class="fa fa-plus-square"></i></a></li>
                 <li><a href="#"><i class="fa fa-trash"></i></a></li>
                 <li><a href="#"><i class="fa fa-eye"></i></a></li>
               </ul>
             </div>
+            <div class="margined">
             <p class="full-name">Daniyil Vasylenko</p>
             <ul class="links">
               <li class="link"><a id="fb" href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
@@ -72,6 +73,7 @@
             <div class="centered margined">
               <a href="#" class="button aqua">Follow</a>
             </div>
+          </div>
 
           </div>
           <div class="mid col-xs-8 col-xs-offset-2 col-sm-offset-0 col-sm-5">
@@ -123,22 +125,22 @@
               <div class="wrapper">
                 <ul class="followers centered">
                   <li class="follower">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/smokey.gif');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/smokey.gif');"></a>
                   </li>
                   <li class="follower">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/vd.jpg');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/vd.jpg');"></a>
                   </li>
                   <li class="follower">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/particles.gif');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/particles.gif');"></a>
                   </li>
                   <li class="follower">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/dust.gif');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/dust.gif');"></a>
                   </li>
                   <li class="follower">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/smokey.gif');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/smokey.gif');"></a>
                   </li>
                   <li class="follower">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/emblem_dark.png');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/emblem_dark.png');"></a>
                   </li>
                 </ul>
               </div>
@@ -148,13 +150,13 @@
               <div class="wrapper">
                 <ul class="following centered">
                   <li class="who-following">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/smokey.gif');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/smokey.gif');"></a>
                   </li>
                   <li class="who-following">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/author-m.jpg');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/author-m.jpg');"></a>
                   </li>
                   <li class="who-following">
-                    <a class="avatar" href="profile.html" style="background-image: url('../img/muse.jpg');"></a>
+                    <a class="avatar opacity-transistion" href="profile.html" style="background-image: url('../img/muse.jpg');"></a>
                   </li>
                 </ul>
               </div>
@@ -169,7 +171,7 @@
                 <li>
                   <div class="project">
                     <a href="../html/project.html">
-                      <img src="../img/proj_img-3.jpg"></img>
+                      <img class="opacity-transistion" src="../img/proj_img-3.jpg"></img>
                       <p class="name">Project #1</p>
                     </a>
                   </div>
@@ -177,7 +179,7 @@
                 <li>
                   <div class="project">
                     <a href="../html/project.html">
-                      <img src="../img/proj_img-3.jpg"></img>
+                      <img class="opacity-transistion" src="../img/proj_img-3.jpg"></img>
                       <p class="name">Project #2</p>
                     </a>
                   </div>
@@ -191,7 +193,7 @@
                   <div class="portfolio-item">
                     <div class="image-wrapper">
                       <a href="../html/project.html">
-                        <img src="../img/proj_img-3.jpg"></img>
+                        <img class="opacity-transistion" src="../img/proj_img-3.jpg"></img>
                         <p class="name">TeamBaker</p>
                       </a>
                     </div>
@@ -227,7 +229,7 @@
                   <div class="portfolio-item">
                     <div class="image-wrapper">
                       <a href="../html/project.html">
-                        <img src="../img/proj_img-3.jpg"></img>
+                        <img class="opacity-transistion" src="../img/proj_img-3.jpg"></img>
                         <p class="name">TeamBaker</p>
                       </a>
                     </div>
@@ -263,7 +265,7 @@
                   <div class="portfolio-item">
                     <div class="image-wrapper">
                       <a href="../html/project.html">
-                        <img src="../img/proj_img-3.jpg"></img>
+                        <img class="opacity-transistion" src="../img/proj_img-3.jpg"></img>
                         <p class="name">TeamBaker</p>
                       </a>
                     </div>
@@ -488,6 +490,7 @@
     <link href="../css/formplate.css" rel="stylesheet">
     <script src="../js/bootstrap-rating-input.min.js"></script>
     <script src="../js/readmore.min.js"></script>
+    <script src="../js/masonry.min.js"></script>
     <script src="../js/profile.js"></script>
   </body>
 </html>
