--- a/html/profile.html
+++ b/html/profile.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="page-content">
-      <div class="top col-xs-12">
+      <div class="top col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1 col-xs-offset-0 col-md-offset-0 col-sm-offset-0">
         <div class="content">
           <div class="left col-xs-12 col-sm-4">
             <div class="avatar-container">
@@ -57,26 +57,55 @@
               </ul>
             </div>
             <div class="margined">
-            <p class="full-name">Daniyil Vasylenko</p>
-            <ul class="links">
-              <li class="link"><a id="fb" href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-              <li class="link"><a id="twitter" href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-              <li class="link"><a id="google" href="#"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
-              <li class="link"><a id="github" href="#"><i class="fa fa-github-square fa-2x"></i></a></li>
-              <li class="link"><a id="linkedIn" href="#"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-              <li class="link"><a id="add" href="#"><i class="fa fa-plus-square fa-2x"></i></a></li>
-            </ul>
-            <div class="rating-container">
-              <span>Rating:</span>
-              <input type="number" name="your_awesome_parameter" id="profile-rating" class="rating" data-icon-lib="fa" data-active-icon="fa-star" data-inactive-icon="fa-star-o" />
+              <p class="full-name">Daniyil Vasylenko</p>
+              <ul class="links">
+                <li class="link"><a id="fb" href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                <li class="link"><a id="twitter" href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                <li class="link"><a id="google" href="#"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
+                <li class="link"><a id="github" href="#"><i class="fa fa-github-square fa-2x"></i></a></li>
+                <li class="link"><a id="linkedIn" href="#"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                <li class="link"><a id="add" href="#"><i class="fa fa-plus-square fa-2x"></i></a></li>
+              </ul>
+              <div class="rating-container">
+                <span>Rating:</span>
+                <input type="number" name="your_awesome_parameter" id="profile-rating" class="rating" data-icon-lib="fa" data-active-icon="fa-star" data-inactive-icon="fa-star-o" />
+              </div>
+              <div class="centered margined">
+                <a href="#" class="button aqua">Follow</a>
+              </div>
+              <div class="centered margined hidden-lg">
+                <a href="#" class="button line-white"><i class="fa fa-envelope-o fa-2x"></i></a>
+                <p class="counter">2</p>
+              </div>
             </div>
-            <div class="centered margined">
-              <a href="#" class="button aqua">Follow</a>
+
+            <div class="notifications hidden-sm hidden-md">
+              <div class="panel panel-hashtag">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Team invitation</h3>
+                  <a class="btn-close" href="#">X</a>
+                </div>
+                <div class="panel-body">
+                  <div class="info-container">
+                    <p class="message">You've got a team invitation from <a href="#someOne">@someOne</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-hashtag">
+                <div class="panel-heading">
+                  <h3 class="panel-title">New Follower</h3>
+                  <a class="btn-close" href="#">X</a>
+                </div>
+                <div class="panel-body">
+                  <div class="info-container">
+                    <p class="message"><a href="#someOne">@someOne</a> is now following you</p>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
 
           </div>
-          <div class="mid col-xs-8 col-xs-offset-2 col-sm-offset-0 col-sm-5">
+          <div class="mid col-xs-8 col-xs-offset-2 col-sm-offset-0 col-sm-5 col-lg-4">
 
             <div class="block centered">
               <h4 class="underlined">Basic info</h4>
@@ -106,6 +135,7 @@
                   <p class="value">Busy</p>
                 </div>
               </div>
+              <a class="btn-edit" href="#"><i class="fa fa-pencil"></i></a>
             </div>
             <div class="clear"></div>
             <div class="block">
@@ -115,11 +145,12 @@
                 <li class="skill"><a href="#">English</a></li>
                 <li class="skill"><a href="#">Team management</a></li>
               </ul>
+              <a class="btn-edit" href="#"><i class="fa fa-pencil"></i></a>
             </div>
 
           </div>
 
-          <div class="right col-xs-6 col-xs-offset-3 col-sm-offset-0 col-sm-3">
+          <div class="right col-xs-6 col-xs-offset-3 col-sm-offset-0 col-sm-3 col-lg-4">
             <div class="block">
               <a href="../html/search.html"><h4 class="centered underlined">85 Followers</h4></a>
               <div class="wrapper">
@@ -162,7 +193,6 @@
               </div>
             </div>
           </div>
-
           <section class="showoff-section col-xs-12 col-sm-8">
             <hr>
             <div class="block centered">
@@ -185,6 +215,7 @@
                   </div>
                 </li>
               </ul>
+              <a class="btn-edit" href="#"><i class="fa fa-pencil"></i></a>
             </div>
             <div class="block centered">
               <h4>Portfolio</h4>
@@ -224,6 +255,7 @@
                         </div>
                     </div>
                   </div>
+                </div>
                 </li>
                 <li>
                   <div class="portfolio-item">
@@ -260,6 +292,7 @@
                         </div>
                     </div>
                   </div>
+                </div>
                 </li>
                 <li>
                   <div class="portfolio-item">
@@ -296,8 +329,10 @@
                         </div>
                     </div>
                   </div>
+                </div>
                 </li>
               </ul>
+              <a class="btn-edit" href="#"><i class="fa fa-pencil"></i></a>
             </div>
           </section>
           <section class="comments-section col-xs-12 col-sm-8 col-sm-offset-2">
